--- a/login.html
+++ b/login.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <p>ini halaman login</p>
-
-<p>ini halaman login2</p>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet pretium est. Integer ex sapien, convallis id ligula at, sodales bibendum purus. Cras at tempor lacus. Fusce nec vehicula nibh. Pellentesque condimentum odio convallis elementum accumsan. In eget accumsan velit. Sed eu pellentesque lectus. Aenean sed metus fringilla, auctor ante a, maximus quam. Mauris porta malesuada neque at luctus. Donec eleifend libero nulla, vitae suscipit ipsum maximus et. Duis sed facilisis nisi. In hac habitasse platea dictumst. Nullam commodo laoreet ligula vestibulum finibus. Ut rutrum cursus libero. Duis tempus lorem a magna posuere convallis.</p>
 
 </body>
 </html>
